test/ScannerAndParserTests/fail/Fail18.java
class name {
	public 
		int
	   	fun1()
	   	{
		
	private int fun2() {}
		}
	private int fun2() {}
	int fun3() {}
	public static int fun4() {}
	private static int fun5() {}
	static int fun6() {}
	public boolean fun7() {}
	private boolean fun8() {}
	boolean	 fun9() {}
	public static boolean fun10() {}
	private static boolean fun11() {}
	static boolean fun12() {}
	public id fun13() {}
	private id fun14() {}
	id fun15() {}
	public static id fun16() {}
	private static id fun17() {}
	static id fun18() {}
	public int[] fun19() {}
	private int[] fun20() {}
	int[] fun21() {}
	public static int[] fun22() {}
	private static int[] fun23() {}
	static int[] fun24() {}
	public id[] fun25() {}
	private id[]fun26() {}
	id [] fun27() {}
	public static id[] fun28() {}
	private static id[] fun29() {}
	static id[] fun30() {}
	public void fun31() {}
	private void fun32() {}
	void fun33() {}
	public static void fun34() {}
	private static void fun35() {}
	static void fun36() {}
}
